Changelog
=========

1.0b7 - Unreleased
------------------


1.0b6 - Released May 2, 2010
----------------------------

* Nogopip vs. Acquisition take two - not all folders have a getOrdering
  method, so we need to avoid acquiring it.
  [hannosch]


1.0b5 - Released April 6, 2010
------------------------------

* Match ``getObjectPositionInParent`` behavior and handle unordered folders
  inside ordered folders shown in the navigation tree at the same time.
  [hannosch]


1.0b4 - Released March 6, 2010
------------------------------

* Don't try to store an acquisition-wrapped catalog on the positional index.
  [hannosch]


1.0b3 - Released February 18, 2010
----------------------------------

* Only apply monkey patch for `reindexOnReorder` on Plone 3.x & shortcut
  indexing completely if the fake index has been installed.
  [witsch]

* Replace monkey patch for `Catalog._getSortIndex` with a fake index that
  can sort search results according to their position in the container.
  [witsch]

* Add optimization for sorting results by folder position for the usual
  "all results in one folder" case.
  [witsch]

* Add adapter for previous/next support that doesn't need the catalog.
  [witsch]

* Remove `getObjPositionInParent` catalog index and use a sort index based
  on the folder's order information instead.
  [witsch]


1.0b2 - Released January 28, 2010
---------------------------------

* Add `IATBTreeFolder` to `implements` list of `ATFolder` replacement.
  [thet]


1.0b1 - Released Nov 15, 2009
-----------------------------

* Copy the `index_html` method from `ATContentTypes` to better support WebDAV.
  [davisagli]

* Add in-place migration code.
  [witsch]

* Work around imports no longer present in Plone 4.0.
  [witsch]

* (Briefly) document the `plone.app.folder.tests.bbb` usage.
  [wichert]


1.0a1 - Released May 7, 2009
----------------------------

* Initial release as factored out from `plone.folder`.
  [witsch]